--- a/app_server/views/partials/header.hbs
+++ b/app_server/views/partials/header.hbs
@@ -11,19 +11,19 @@
                 <a href="/travel">Travel</a>
             </li>
             <li>
-                <a href="/rooms">Rooms</a>
+                <a href="/rooms.html">Rooms</a>
             </li>
             <li>
-                <a href="/meals">Meals</a>
+                <a href="/meals.html">Meals</a>
             </li>
             <li>
-                <a href="/news">News</a>
+                <a href="/news.html">News</a>
             </li>
             <li>
-                <a href="/about">About</a>
+                <a href="/about.html">About</a>
             </li>
             <li>
-                <a href="/contact">Contact</a>
+                <a href="/contact.html">Contact</a>
             </li>
         </ul>
     </div>
